syntax = "proto3";

package demo1;

option go_package = "./;pb";


service Demo1Service{
  rpc ServerStreamingMethod(RequestMessage) returns (stream ResponseMessage){}
}

message RequestMessage{
  string message = 1;
}

message ResponseMessage{
  string message = 1 ;
}